# micro_grad

./: README.md  pyproject.toml
src/: main.py  nn.py  tensor.py  trace_graph.py
